infra/k8s/writing_srv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: writing-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: writing
  template:
    metadata:
      labels:
        app: writing
    spec:
      containers:
        - name: writing
          image: joekingsleymukundi/writing
---
apiVersion: v1
kind: Service
metadata:
  name: writing-srv
spec:
  selector:
    app: writing
  ports:
    - name: writing
      protocol: TCP
      port: 8000
      targetPort: 8000
    - name: writing-mail
      protocol: TCP
      port: 587
      targetPort: 587
