infra/k8s/ingress_srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: platnumendwriters.com
      http:
        paths:
          - pathType: Prefix
            path: "/?(.*)"
            backend:
              service:
                name: writing-srv
                port:
                  number: 8000
